# gvdb-rs

./: .gitignore  Cargo.toml  README.md
gvdb-sys/: Cargo.toml  README.md  build.rs
gvdb-sys/gvdb/: gvdb-builder.c  gvdb-builder.h  gvdb-reader.c
gvdb-sys/src/: lib.rs
src/: builder.rs  lib.rs
